--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "LWWElement.js",
   "scripts": {
-    "test": "jest",
-    "coverage": "jest --config ./jest.config.js --coverage"
+    "test": "jest --config ./jest.config.js --coverage"
   },
   "author": "",
   "license": "ISC",
